// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`combined 1`] = `
"'use client'

import { Button as ButtonPrimitive } from '@base-ui/react/button'
import { type FunctionComponent, type PropsWithChildren, createContext } from 'react'

import { cn } from '@/lib/utils'

type ExampleContextProps = { content: string }

const ExampleContext = createContext<ExampleContextProps | null>(null)
export const ExampleProvider: FunctionComponent<PropsWithChildren<{ value: ExampleContextProps }>> = ({
  value,
  ...props
}) => {
  return <ExampleContext.Provider value={value}>{props.children}</ExampleContext.Provider>
}
export const Example: FunctionComponent<ButtonPrimitive.Props & { content: string }> = ({
  content,
  className,
  ...props
}) => {
  return (
    <ExampleProvider value={{ content }}>
      <ButtonPrimitive className={cn('p-2', className)} {...props} />
    </ExampleProvider>
  )
}
"
`;

exports[`enforceDirectExports 1`] = `
"'use client'

import { Button as ButtonPrimitive } from '@base-ui/react/button'
import * as React from 'react'

import { cn } from '@/lib/utils'

type ExampleContextProps = { content: string }

const ExampleContext = React.createContext<ExampleContextProps | null>(null)

export function ExampleProvider({ value, ...props }: React.PropsWithChildren<{ value: ExampleContextProps }>) {
  return <ExampleContext.Provider value={value}>{props.children}</ExampleContext.Provider>
}

export function Example({ content, className, ...props }: ButtonPrimitive.Props & { content: string }) {
  return (
    <ExampleProvider value={{ content }}>
      <ButtonPrimitive className={cn('p-2', className)} {...props} />
    </ExampleProvider>
  )
}
"
`;

exports[`enforceFunctionComponent 1`] = `
"'use client'

import { Button as ButtonPrimitive } from '@base-ui/react/button'
import * as React from 'react'

import { cn } from '@/lib/utils'

type ExampleContextProps = { content: string }

const ExampleContext = React.createContext<ExampleContextProps | null>(null)
const ExampleProvider: React.FunctionComponent<React.PropsWithChildren<{ value: ExampleContextProps }>> = ({
  value,
  ...props
}) => {
  return <ExampleContext.Provider value={value}>{props.children}</ExampleContext.Provider>
}
const Example: React.FunctionComponent<ButtonPrimitive.Props & { content: string }> = ({
  content,
  className,
  ...props
}) => {
  return (
    <ExampleProvider value={{ content }}>
      <ButtonPrimitive className={cn('p-2', className)} {...props} />
    </ExampleProvider>
  )
}
export { Example, ExampleProvider }
"
`;

exports[`enforceNamedImports 1`] = `
"'use client'

import { Button as ButtonPrimitive } from '@base-ui/react/button'
import { type PropsWithChildren, createContext } from 'react'

import { cn } from '@/lib/utils'

type ExampleContextProps = { content: string }

const ExampleContext = createContext<ExampleContextProps | null>(null)

function ExampleProvider({ value, ...props }: PropsWithChildren<{ value: ExampleContextProps }>) {
  return <ExampleContext.Provider value={value}>{props.children}</ExampleContext.Provider>
}

function Example({ content, className, ...props }: ButtonPrimitive.Props & { content: string }) {
  return (
    <ExampleProvider value={{ content }}>
      <ButtonPrimitive className={cn('p-2', className)} {...props} />
    </ExampleProvider>
  )
}

export { Example, ExampleProvider }
"
`;
